debut de version objet

--- a/koppen.ipynb
+++ b/koppen.ipynb
@@ -694,6 +694,40 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "def koppen_classification_from_dfrow(row):\n",
+        "    \"\"\"\n",
+        "    Wrapper function to compute Köppen classification from a DataFrame row using the Koppen class.\n",
+        "\n",
+        "    Args:\n",
+        "        row (pd.Series): A row of the DataFrame with relevant climate data.\n",
+        "\n",
+        "    Returns:\n",
+        "        str: The full Köppen classification or 'no_class' if it cannot be determined.\n",
+        "    \"\"\"\n",
+        "    # Extract data from the DataFrame row\n",
+        "    koppen_instance = Koppen(\n",
+        "        alt=row['ALT'],\n",
+        "        monthly_precip=[row[f\"{str(month).zfill(2)}_RR\"] for month in range(1, 13)],\n",
+        "        monthly_temp=[row[f\"{str(month).zfill(2)}_T\"] for month in range(1, 13)],\n",
+        "        annual_precip=row.get(\"13_RR\", None),\n",
+        "        annual_temp=row.get(\"13_T\", None),\n",
+        "        hemisphere=row.get(\"hemisphere\", None),\n",
+        "        station_name=row.get('NOM', None)\n",
+        "    )\n",
+        "\n",
+        "    # Compute the classification\n",
+        "    return koppen_instance.classify()\n"
+      ],
+      "metadata": {
+        "id": "A9w58jkcax8Z"
+      },
+      "id": "A9w58jkcax8Z",
+      "execution_count": 128,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "N8akLAa9zAzf"
