--- a/koppen.ipynb
+++ b/koppen.ipynb
@@ -728,7 +728,127 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class Koppen:\n",
+        "    def __init__(self, alt, monthly_precip, monthly_temp, annual_precip=None, annual_temp=None, hemisphere=None, station_name=None):\n",
+        "        self.alt = alt\n",
+        "        self.monthly_precip = monthly_precip\n",
+        "        self.monthly_temp = monthly_temp\n",
+        "        self.annual_precip = annual_precip or sum(monthly_precip)\n",
+        "        self.annual_temp = annual_temp or sum(monthly_temp) / len(monthly_temp)\n",
+        "        self.hemisphere = hemisphere\n",
+        "        self.station_name = station_name\n",
+        "\n",
+        "    @property\n",
+        "    def min_monthly_precip(self):\n",
+        "        return min(self.monthly_precip)\n",
+        "\n",
+        "    @property\n",
+        "    def max_monthly_temp(self):\n",
+        "        return max(self.monthly_temp)\n",
+        "\n",
+        "    @property\n",
+        "    def min_monthly_temp(self):\n",
+        "        return min(self.monthly_temp)\n",
+        "\n",
+        "    @property\n",
+        "    def months_above_10c(self):\n",
+        "        return sum(1 for temp in self.monthly_temp if temp > 10)\n",
+        "\n",
+        "    @property\n",
+        "    def wettest_winter_month(self):\n",
+        "        if self.hemisphere == 'Northern Hemisphere':\n",
+        "            return max(self.monthly_precip[11:] + self.monthly_precip[:2])  # Dec, Jan, Feb\n",
+        "        else:\n",
+        "            return max(self.monthly_precip[5:8])  # Jun, Jul, Aug\n",
+        "\n",
+        "    @property\n",
+        "    def driest_winter_month(self):\n",
+        "        if self.hemisphere == 'Northern Hemisphere':\n",
+        "            return min(self.monthly_precip[11:] + self.monthly_precip[:2])  # Dec, Jan, Feb\n",
+        "        else:\n",
+        "            return min(self.monthly_precip[5:8])  # Jun, Jul, Aug\n",
+        "\n",
+        "    @property\n",
+        "    def wettest_summer_month(self):\n",
+        "        if self.hemisphere == 'Northern Hemisphere':\n",
+        "            return max(self.monthly_precip[5:8])  # Jun, Jul, Aug\n",
+        "        else:\n",
+        "            return max(self.monthly_precip[11:] + self.monthly_precip[:2])  # Dec, Jan, Feb\n",
+        "\n",
+        "    @property\n",
+        "    def driest_summer_month(self):\n",
+        "        if self.hemisphere == 'Northern Hemisphere':\n",
+        "            return min(self.monthly_precip[5:8])  # Jun, Jul, Aug\n",
+        "        else:\n",
+        "            return min(self.monthly_precip[11:] + self.monthly_precip[:2])  # Dec, Jan, Feb\n",
+        "\n",
+        "    def first_letter(self):\n",
+        "        if self.annual_temp > 18 and self.min_monthly_temp > 18:\n",
+        "            return 'A'  # Tropical\n",
+        "        elif self.annual_precip < (self.annual_temp * 20 if self.annual_temp else 0):\n",
+        "            return 'B'  # Arid\n",
+        "        elif -3 <= self.min_monthly_temp < 18 and self.max_monthly_temp > 10:\n",
+        "            return 'C'  # Temperate\n",
+        "        elif self.min_monthly_temp < -3 and self.max_monthly_temp > 10:\n",
+        "            return 'D'  # Continental\n",
+        "        elif self.max_monthly_temp < 10:\n",
+        "            return 'E'  # Polar\n",
+        "        else:\n",
+        "            return 'no_class'\n",
+        "\n",
+        "    def second_letter(self, first_letter):\n",
+        "        if first_letter == 'A':  # Tropical climates\n",
+        "            if self.min_monthly_precip >= 60:\n",
+        "                return 'f'  # No dry season (rainforest)\n",
+        "            elif self.min_monthly_precip < 60 and self.min_monthly_precip < (100 - self.annual_precip / 25):\n",
+        "                return 'w'  # Dry winter (savanna)\n",
+        "            elif self.min_monthly_precip < 60 and self.min_monthly_precip >= (100 - self.annual_precip / 25):\n",
+        "                return 's'  # Dry summer (savanna)\n",
+        "        elif first_letter in {'C', 'D'}:  # Temperate or Continental climates\n",
+        "            if self.driest_winter_month < self.wettest_winter_month / 10:\n",
+        "                return 'w'  # Dry winter\n",
+        "            elif self.driest_summer_month < 40 and self.driest_summer_month < self.wettest_winter_month / 3:\n",
+        "                return 's'  # Dry summer\n",
+        "            else:\n",
+        "                return 'f'  # No dry season\n",
+        "        elif first_letter == 'B':  # Arid climates\n",
+        "            return 'W' if self.annual_precip < 250 else 'S'  # Desert or Steppe\n",
+        "        elif first_letter == 'E':  # Polar climates\n",
+        "            return 'T' if max(self.monthly_precip) > 0 else 'F'  # Tundra or Ice Cap\n",
+        "        else:\n",
+        "            return 'no_class'\n",
+        "\n",
+        "    def third_letter(self, first_letter):\n",
+        "        if first_letter == 'A':  # Tropical climates don't have a third letter\n",
+        "            return ''\n",
+        "        elif first_letter == 'B':  # Arid climates\n",
+        "            return 'h' if self.annual_temp > 18 else 'k'  # Hot or cold\n",
+        "        elif first_letter in {'C', 'D'}:  # Temperate or Continental climates\n",
+        "            if self.max_monthly_temp > 22:\n",
+        "                return 'a'  # Hot summer\n",
+        "            elif self.max_monthly_temp < 22 and self.months_above_10c >= 4:\n",
+        "                return 'b'  # Warm summer\n",
+        "            elif self.max_monthly_temp < 22 and self.months_above_10c < 4 and self.min_monthly_temp > -38:\n",
+        "                return 'c'  # Short and cool summer\n",
+        "            else:\n",
+        "                return 'd'  # Severe winter\n",
+        "        elif first_letter == 'E':  # Polar climates don't have a third letter\n",
+        "            return ''\n",
+        "        else:\n",
+        "            return 'no_class'\n",
+        "\n",
+        "    def classify(self):\n",
+        "        try:\n",
+        "            first = self.first_letter()\n",
+        "            if first == 'no_class':\n",
+        "                return 'no_class'\n",
+        "            second = self.second_letter(first)\n",
+        "            third = self.third_letter(first)\n",
+        "            return f\"{first}{second}{third}\"\n",
+        "        except Exception:\n",
+        "            return 'no_class'\n"
+      ],
       "metadata": {
         "id": "N8akLAa9zAzf"
       },
